# ChangeLog for dev-perl/Archive-Zip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Zip/ChangeLog,v 1.86 2012/09/01 11:12:49 grobian Exp $

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org> Archive-Zip-1.300.0.ebuild:
  Marked ~ppc-aix, bug #432288

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  26 Mar 2012; Naohiro Aota <naota@gentoo.org> Archive-Zip-1.300.0.ebuild:
  Add ~x86-fbsd. #408399

  24 Mar 2012; Fabian Groffen <grobian@gentoo.org> Archive-Zip-1.300.0.ebuild:
  Marked ~x64-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Archive-Zip-1.30.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Archive-Zip-1.300.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Archive-Zip-1.300.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org> +Archive-Zip-1.300.0.ebuild:
  Change version scheme

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Archive-Zip-1.16.ebuild,
  -Archive-Zip-1.20.ebuild, -Archive-Zip-1.23.ebuild:
  Cleanup

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  Archive-Zip-1.30.ebuild:
  ppc64 stable wrt #341865

  27 Jun 2010; <nixnut@gentoo.org> Archive-Zip-1.30.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> Archive-Zip-1.30.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #314467

  05 May 2010; Jeroen Roovers <jer@gentoo.org> Archive-Zip-1.30.ebuild:
  Stable for HPPA (bug #314467).

  18 Apr 2010; Markus Meier <maekke@gentoo.org> Archive-Zip-1.30.ebuild:
  arm stable, bug #314467

  17 Apr 2010; Torsten Veller <tove@gentoo.org> Archive-Zip-1.30.ebuild:
  Stable on amd64, x86 (#314467)

  21 Jan 2010; Torsten Veller <tove@gentoo.org> Archive-Zip-1.16.ebuild,
  Archive-Zip-1.20.ebuild:
  mips -> ~mips

  09 Jan 2010; Fabian Groffen <grobian@gentoo.org> Archive-Zip-1.30.ebuild:
  Transfer Prefix keywords
