@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Archive-Zip
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Zip/ChangeLog,v 1.86 2012/09/01 11:12:49 grobian Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Zip/ChangeLog,v 1.87 2014/02/01 23:44:02 vapier Exp $
+
+  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> Archive-Zip-1.300.0.ebuild:
+  Add arm64 love.
 
   01 Sep 2012; Fabian Groffen <grobian@gentoo.org> Archive-Zip-1.300.0.ebuild:
   Marked ~ppc-aix, bug #432288
